--- a/iCareJava/nbproject/project.properties
+++ b/iCareJava/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=iCareJava
-main.class=iHealth.ui.Connexion
+main.class=iHealth.ui.ICareJava
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
