--- a/iCareJava/nbproject/project.properties
+++ b/iCareJava/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=iCareJava
+application.vendor=cleme
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,9 @@ dist.jar=${dist.dir}/iCareJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/iCareJava
+endorsed.classpath=
 excludes=
-file.reference.ojdbc6-11.2.0.3.jar=C:\\Users\\MZ\\Desktop\\TIS4\\S8\\SIS\\BD\\ojdbc6-11.2.0.3.jar
+file.reference.ojdbc6-11.2.0.3.jar=C:\\Users\\cleme\\Downloads\\ojdbc6-11.2.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=iCareJava
-main.class=iHealth.ui.ICareJava
+main.class=iHealth.ui.Connexion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
