--- a/iCareJava/src/iHealth/db/database.properties
+++ b/iCareJava/src/iHealth/db/database.properties
@@ -6,12 +6,12 @@ jdbc.driver = oracle.jdbc.OracleDriver
 # Databse URL
 database.url = jdbc:oracle:thin:@im2ag-oracle.e.ujf-grenoble.fr:1521:im2ag
 # Username and password to access the database
-<<<<<<< HEAD
-database.username = duchescl
-database.password = af823b6999
+
+#database.username = duchescl
+#database.password = af823b6999
 
 
 # Username and password to access the database
-#database.username = zenatim
-#database.password = edd2b8fa6a
+database.username = zenatim
+database.password = edd2b8fa6a
 
