--- a/iCareJava/nbproject/project.properties
+++ b/iCareJava/nbproject/project.properties
@@ -39,8 +39,8 @@ file.reference.ojdbc6-11.2.0.3.jar=C:\\Users\\cleme\\Downloads\\ojdbc6-11.2.0.3.
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6-11.2.0.3.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ojdbc6-11.2.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
