--- a/iCareJava/nbproject/project.properties
+++ b/iCareJava/nbproject/project.properties
@@ -35,17 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/iCareJava
 endorsed.classpath=
 excludes=
-file.reference.ojdbc6-11.2.0.3.jar=C:\\Users\\cleme\\Downloads\\ojdbc6-11.2.0.3.jar
+file.reference.ojdbc6-11.2.0.3.jar=lib/ojdbc6-11.2.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.ojdbc6-11.2.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${libs.absolutelayout.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
