--- a/iCareJava/nbproject/project.properties
+++ b/iCareJava/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/iCareJava
 endorsed.classpath=
 excludes=
+file.reference.itext-2.1.3.jar.zip=lib/itext-2.1.3.jar.zip
 file.reference.ojdbc6-11.2.0.3.jar=lib/ojdbc6-11.2.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6-11.2.0.3.jar}
+    ${file.reference.ojdbc6-11.2.0.3.jar}:\
+    ${file.reference.itext-2.1.3.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
